--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -98,6 +98,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、日本、欧洲、美国、加拿大、香港等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、日本、新加坡、美国、香港、加拿大、韩国等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2024-12-29">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -206,16 +234,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-30244.htm" title="动物疫苗接种时间查询app 动物疫苗查询系统">动物疫苗接种时间查询app 动物疫苗查询系统</a></li>
-                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
-                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-23-node-share.htm" title="12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址">12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-31678.htm" title="linux搭建NFS网络文件共享服务">linux搭建NFS网络文件共享服务</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-24-free-subscribe-node.htm" title="12月24日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月24日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-32626.htm" title="领养宠物需要什么手续（领养宠物需要收费吗）">领养宠物需要什么手续（领养宠物需要收费吗）</a></li>
-                        <li class="py-2"><a href="/news/article-32625.htm" title="北京爱宠怡康动物医院(梧桐店)（北京宠爱动物医院消费高吗）">北京爱宠怡康动物医院(梧桐店)（北京宠爱动物医院消费高吗）</a></li>
-                        <li class="py-2"><a href="/news/article-30725.htm" title="动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）">动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" title="12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-32149.htm" title="猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）">猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-26-node-share-links.htm" title="12月26日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">12月26日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
+                        <li class="py-2"><a href="/news/article-30724.htm" title="动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）">动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）</a></li>
+                        <li class="py-2"><a href="/news/article-32150.htm" title="八公家宠物酒店（八公家宠物酒店怎么样）">八公家宠物酒店（八公家宠物酒店怎么样）</a></li>
+                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
+                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
+                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
                     </ul>
     </div>
 </div>
@@ -227,7 +255,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                     </ul>
     </div>
